# AutoCareers

./: .gitignore  README-messaging.md  README.md  api.py  dockerfile  job_description.txt  package-lock.json  pyproject.toml  run_messaging.py
DB_Connectors/: config.yaml  db_connection.py
common/: ai_factory.py
docs/: MIDPOINT_UPDATE.md  git_log.txt
frontend/: README.md  RUNNING.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  firebase.ts  index.css  views.ts
frontend/src/components/: ATSFeedbackCard.tsx  ConversationItem.tsx  ConversationList.tsx  ConversationView.tsx  CoverLetterCard.tsx  FilterBar.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  NavBar.tsx
frontend/src/data/: dummyUsers.ts
frontend/src/pages/: ATSScore.tsx  ApplicantsList.tsx  CoverLetter.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  MessageBoard.tsx  Recommendations.tsx  RecruiterMessageBoard.tsx  Register.tsx  Signup.tsx  Splash.tsx  job-seeker-view.tsx
job_recommendation_engine/: job_scraper.py  push_to_mongodb.py  recommend_jobs.py  upsert_to_pinecone.py
messages/: README.md  main.py  schemas.py
messages/models/: __init__.py  database.py  models.py
messages/routes/: message_routes.py
messages/services/: message_service.py
messages/tests/: __init__.py
messages/utils/: websocket_manager.py
models/: Job.py
nb/: Gemma3_(1B)-GRPO.ipynb  Qwen2.5_(3B)-GRPO.ipynb
pdf2latex_agent/: README.md  agent.py  ats_score_generator.py  cli.py  config.yaml  cover_letter_generator.py  factory.py  job_scrapper.py  latex_feed.py  pdf_converter.py  pdf_processor.py  resume_feedback_generator.py
pdf2latex_agent/tests/: test_pdf2latex_agent.py
tests/messages/: __init__.py  test_api.py  test_models.py
(+12 files in other folders)
