[tool.poetry]
name = "pdf2latex_agent"
version = "0.1.0"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
llama-index = "^0.12.24"
together = "^1.4.6"
PyYAML = "^6.0"
pypdf = "^5.1.0"  
llama-index-llms-together = "^0.3.1"
selenium = "^4.30.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
pdf2latex-agent = "pdf2latex_agent.cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
