[tool.poetry]
name = "AutoCareers"
version = "0.1.0"
readme = "README.md"
license = "MIT"
packages = [
  { include = "pdf2latex_agent" },
  { include = "job_recommendation_engine" },
  { include = "DB_Connectors" },
  { include = "common" },
  { include = "messages" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
llama-index = "^0.12.24"
together = "^1.4.6"
PyYAML = "^6.0"
pypdf = "^5.1.0"  
llama-index-llms-together = "^0.3.1"
python-multipart = "^0.0.9"
fastapi = { version = "^0.115.0", extras = ["all"] }

pymongo = {extras = ["srv"], version = "^4.11.3"}
pinecone = "^6.0.2"
uvicorn = "^0.34.0"
selenium = "^4.30.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
pdf2latex-agent = "pdf2latex_agent.cli:main"
job-scraper = "job_recommendation_engine.push_to_mongodb:main"
DB-connect= "DB_Connectors.db_connection:main"
mongo-to-pinecone = "job_recommendation_engine.upsert_to_pinecone:main"
recommend-jobs = "job_recommendation_engine.recommend_jobs:main"

[tool.poetry.group.dev.dependencies]
mongomock = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
